[gd_scene load_steps=15 format=2]

[ext_resource path="res://player/player_model.gltf" type="PackedScene" id=1]
[ext_resource path="res://vfx/sufr_sled.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/laser.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/Player2.gd" type="Script" id=4]
[ext_resource path="res://scripts/IK_Control.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.08, 0.4, 0.07 )

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.089
bottom_radius = 0.089
height = 2.423

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.984314, 0, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.49526, 6.25827, 15 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 12, 6, 15 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 12, 6, 15 )

[sub_resource type="CapsuleShape" id=8]
radius = 0.584258

[sub_resource type="CylinderShape" id=9]
radius = 3.15656
height = 1.90545

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )

[node name="player_model" parent="." instance=ExtResource( 1 )]

[node name="Skeleton" parent="player_model/Armature" index="0"]
bones/8/bound_children = [ NodePath("hand_left") ]
bones/26/bound_children = [ NodePath("hand_right") ]

[node name="Polyhuman" parent="player_model/Armature/Skeleton" index="0"]
material/0 = SubResource( 1 )

[node name="hand_right" type="BoneAttachment" parent="player_model/Armature/Skeleton" index="1"]
transform = Transform( 0.846265, -0.00485311, -0.532739, -0.518039, 0.225955, -0.824973, 0.124379, 0.974125, 0.188704, -0.312379, 1.64263, 0.609595 )
bone_name = "hand_r"

[node name="gunRight" type="MeshInstance" parent="player_model/Armature/Skeleton/hand_right"]
transform = Transform( 0.929758, -0.0425305, 0.365706, 0.0395185, 0.999095, 0.0157219, -0.366045, -0.000165306, 0.930596, 0.0344707, 0.268745, -0.10926 )
mesh = SubResource( 2 )
material/0 = null

[node name="muzzleRight" type="Spatial" parent="player_model/Armature/Skeleton/hand_right/gunRight"]
transform = Transform( 1, 9.31323e-09, -2.11876e-08, 0, 1, 0, 4.65661e-10, 3.72529e-08, 1, -0.00898212, 0.362993, 0.0165361 )

[node name="hand_left" type="BoneAttachment" parent="player_model/Armature/Skeleton" index="2"]
transform = Transform( 0.846265, 0.00485298, 0.532739, 0.518039, 0.225955, -0.824973, -0.124378, 0.974125, 0.188703, 0.312379, 1.64263, 0.609595 )
bone_name = "hand_l"

[node name="gunLeft" type="MeshInstance" parent="player_model/Armature/Skeleton/hand_left"]
transform = Transform( 0.888494, 0.103364, -0.447098, -0.103754, 0.994321, 0.0236918, 0.447009, 0.0253382, 0.894171, 0.00420213, 0.237485, -0.0786008 )
mesh = SubResource( 2 )
material/0 = null

[node name="muzzleLeft" type="Spatial" parent="player_model/Armature/Skeleton/hand_left/gunLeft"]
transform = Transform( 0.999999, 4.89876e-07, 4.98723e-07, -1.28523e-07, 0.999999, 9.68575e-08, -1.83703e-07, -1.63913e-07, 0.999999, 0.0167189, 0.363681, 0.0153646 )

[node name="leftHandle" type="Spatial" parent="player_model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.364243, 1.54943, -1.29951 )

[node name="Debug" type="MeshInstance" parent="player_model/leftHandle"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="rightHandle" type="Spatial" parent="player_model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.303532, 1.54943, -1.34095 )

[node name="restLeft" type="Spatial" parent="player_model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.364243, 1.54943, -1.29951 )

[node name="restRight" type="Spatial" parent="player_model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.303532, 1.54943, -1.34095 )

[node name="Akimbo_Area" type="Area" parent="player_model"]

[node name="CollisionShape" type="CollisionShape" parent="player_model/Akimbo_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )
shape = SubResource( 5 )

[node name="Left_Hand_Area" type="Area" parent="player_model"]

[node name="CollisionShape" type="CollisionShape" parent="player_model/Left_Hand_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, -15 )
shape = SubResource( 6 )

[node name="Right_Hand_Area" type="Area" parent="player_model"]

[node name="CollisionShape" type="CollisionShape" parent="player_model/Right_Hand_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -15 )
shape = SubResource( 7 )

[node name="Sufr_wave" parent="player_model" instance=ExtResource( 2 )]
emitting = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.00528, 0.104091 )
shape = SubResource( 8 )

[node name="IK_Control" type="Spatial" parent="."]
script = ExtResource( 5 )
skeleton_path = NodePath("../player_model/Armature/Skeleton")
update_mode = 1
additional_rotation_left = Vector3( -90, 90, 0 )
additional_rotation_right = Vector3( -90, -90, 0 )

[node name="proximityArea" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="proximityArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 0.5, -0.55667, 0.663414, 0, 0.766044, 0.642788, -0.866025, -0.321394, 0.383022, 9.719, 11.346, 4.69 )

[node name="laserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="player_model/Akimbo_Area" to="IK_Control" method="_on_Akimbo_Area_body_entered"]
[connection signal="body_exited" from="player_model/Akimbo_Area" to="IK_Control" method="_on_Akimbo_Area_body_exited"]
[connection signal="body_entered" from="player_model/Left_Hand_Area" to="IK_Control" method="_on_Left_Hand_Area_body_entered"]
[connection signal="body_exited" from="player_model/Left_Hand_Area" to="IK_Control" method="_on_Left_Hand_Area_body_exited"]
[connection signal="body_entered" from="player_model/Right_Hand_Area" to="IK_Control" method="_on_Right_Hand_Area_body_entered"]
[connection signal="body_exited" from="player_model/Right_Hand_Area" to="IK_Control" method="_on_Right_Hand_Area_body_exited"]
[connection signal="body_entered" from="proximityArea" to="." method="_on_proximityArea_body_entered"]

[editable path="player_model"]
